fixed side bar button on mobile

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -51,6 +51,9 @@
 }
 
 .menu {
+    background-color: transparent;
+    border: none;
+    padding: 0;
     height: 100px;
     width: 70px;
     flex-shrink: 0;
